linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: linkding
  name: linkding
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: linkding
    spec:
      strategy:
        type: Recreate
      containers:
      - image: sissbruecker/linkding:1.36.0
        name: linkding
        ports:
          - containerPort: 9090
            name: linkding-web
        volumeMounts:
        - mountPath: "/etc/linkding/data"
          name: data
        resources: {}
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkding-pvc
status: {}
