linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding-svc
spec:
  selector:
    app: linkding
  ports:
    - protocol: TCP
      port: 80
      targetPort: linkding-web-svc
